# automate

./: .env.example  .gitignore  kiriti_profile.txt  main.py  pyproject.toml  requirements.txt  resume.txt  run.py
app/: companies.py  config.py  db.py  main.py  normalize.py  refresh.py  scoring.py  web.py
app/outreach/: excel.py  generate.py  routes.py  send.py  service.py  store.py
app/sources/: adzuna.py  greenhouse.py  jsearch.py  lever.py
assets/: contacts.xlsx
public/static/: outreach.css
static/: outreach.js  style.css
templates/: dashboard.html  outreach.html
