[project]
name = "pm-job-pipeline"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.36",
  "pydantic-settings>=2.6.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.12",
  "apscheduler>=3.10.4",
  "openai>=1.50.0",
  "openpyxl>=3.1.5",
  "pandas>=2.0.0",
]

[tool.vercel]
entrypoint = "main:app"
